Final dev version

--- a/de/features/index.html
+++ b/de/features/index.html
@@ -102,15 +102,15 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Komfortabel</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Die App hat einen großen Funktionsempfang sodass die Datenauswertung möglichst komfortabel abläuft.</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Multifunktional</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Die App hat viele verschiedene Funktionen. Unter anderem folgende:</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_map_with_all_sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_compare_different_sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_link_your_own_sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_notification_on_threshold_exceedings</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_notification_on_threshold_exceedings</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">str_evaluate_data_comfortable</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Wählen von Farben</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Farben von Bildern wählen</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Zufällige Farben erzeugen</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Farben speichern, laden und exportieren</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Farbennamen vorlesen</li>
+                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">Instant-Version verfügbar</li>
                             </ul>
                         </div>
                     </div>
@@ -120,14 +120,14 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Flexibel</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Viele nützliche Tools, um die Messdaten im Detail anzuzeigen und auszuwerten.</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Minimalistisch</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Das Ziel dieser App ist, genau das zu machen was sie soll. Nicht mehr und nicht weniger.</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Messdaten als Diagramm anzeigen</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Messdaten als Datensätze anzeigen</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Täglichen Mittelwert und Median anzeigen</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Diagramm und Datensätze exportieren</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Sensoren teilen</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Instant-Version verfügbar</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Keine störende Werbung oder Popups</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Leichtgewichtig</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Kein unnötig verbrauchter Speicherplatz</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Keine unbegründeten Berechtigungen</li>
                             </ul>
                         </div>
                     </div>
@@ -147,15 +147,12 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Benutzerdefinierbar</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Das Aussehen und Verhalten der App sind vollständig vom Nutzer bestimmbar.</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Modular</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Integriert sich perfekt ins bestehende Android-Ökosystem</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Homescreen widget.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Anpassbare Grenzwerte mit Benachrichtigung.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Automatische Fehlerkorrektur.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Anpassbarer Synchronisationszyklus.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Dunkler Modus.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">Benachrichtigung bei Sensor-Ausfällen.</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Vom 'Teilen-Dialog' aus erreichbar</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Feature-Shortcuts</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Farben in die Zwischenablage speichern</li>
                             </ul>
                         </div>
                     </div>
