--- a/de/index.html
+++ b/de/index.html
@@ -140,7 +140,7 @@
                         <div class="thumb">
                             <img src="img/icon/import_export.png" alt="">
                         </div>
-                        <h3>Speichere, lade und exportiere Farben</h3>
+                        <h3>Farben speichern, laden und exportieren</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
@@ -148,7 +148,7 @@
                         <div class="thumb">
                           <img src="img/icon/volume_up.png" alt="">
                         </div>
-                        <h3>Farbennamen vorlesen *</h3>
+                        <h3>Farbennamen vorlesen</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
@@ -156,7 +156,7 @@
                         <div class="thumb">
                            <img src="img/icon/mobile_friendly.png" alt="">
                         </div>
-                        <h3>Instant-Version verfügbar **</h3>
+                        <h3>Instant-Version verfügbar</h3>
                     </div>
                 </div>
             </div>
@@ -184,15 +184,15 @@
                     <div class="col-lg-4 col-md-4">
                         <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                             <span>01</span>
-                            <h3>Lade die App herunter</h3>
-                            <p>Bitte klicke auf den Button 'Jetzt ausprobieren' unten, um die App auszuprobieren, ohne sie zu installieren (Link funktioniert nur auf Android-Geräten ordnungsgemäß).</p>
+                            <h3>Probiere die App aus</h3>
+                            <p>Bitte klicke auf den Button unten, um die App auszuprobieren, ohne sie zu installieren (Link funktioniert nur auf Android-Geräten ordnungsgemäß).</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                             <span>02</span>
-                            <h3>Verknüpfe Deinen Sensor</h3>
-                            <p>Navigiere innerhalb der App zu dem Reiter 'Meine Sensoren' und tippe auf die '+'-Schaltfläche um einen eigenen Sensor zu verknüpfen.</p>
+                            <h3>Installiere die App</h3>
+                            <p>Wenn Dir die App gefällt, kannst du sie jederzeit installieren, um auf den vollen Funktionsumfang zuzugreifen.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
@@ -239,15 +239,14 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Benutzerdefinierbar</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Das Aussehen und Verhalten der App sind vollständig vom Nutzer bestimmbar.</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Minimalistisch</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Das Ziel dieser App ist, genau das zu machen was sie soll. Nicht mehr und nicht weniger.</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Homescreen widget.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Anpassbare Grenzwerte mit Benachrichtigung.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Automatische Fehlerkorrektur.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Anpassbarer Synchronisationszyklus.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Dunkler Modus.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">Benachrichtigung bei Sensor-Ausfällen.</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Instant-Version verfügbar</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Keine störende Werbung oder Popups</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Leichtgewichtig</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Kein unnötig verbrauchter Speicherplatz</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Keine unbegründeten Berechtigungen</li>
                             </ul>
                             <div class="about_btn wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".8s" >
                                 <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Jetzt herunterladen</a>
