--- a/en/features/index.html
+++ b/en/features/index.html
@@ -102,15 +102,15 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Comfortable</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">The app has a wide range of features to make the data evaluation as comfortable as possible.</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Multifunctional</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">The app has many different features. For instance this ones:</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_map_with_all_sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_compare_different_sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_link_your_own_sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_notification_on_threshold_exceedings</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_notification_on_threshold_exceedings</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">str_evaluate_data_comfortable</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Choose colors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Choose colors from images</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Create random colors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Save, load and export colors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Speak color names</li>
+                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">Instant version available</li>
                             </ul>
                         </div>
                     </div>
@@ -120,14 +120,14 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Flexible</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Many useful tools, to display and evaluate measurement data in detail.</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Minimalistic</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">The target of this app is, to do exactly what it should do. Not more, not less.</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Show measurement data in a graph</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Show measurements as data records</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Show daily average and median</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Export graph and records</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Share sensors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Instant version available</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">No annoying ads or popups</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Lightweight</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">No wasted storage</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">No unnecessary permissions</li>
                             </ul>
                         </div>
                     </div>
@@ -147,15 +147,12 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">High customizability</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">The app is highly customizable, to ensure a great look and feel.</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Modular</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Integrates perfectly into the existing Android ecosystem</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Homescreen widget.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Adjustable thresholds with notifications.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Automatic error correction.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Adjustable sync cycle.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Dark mode.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">Notification on sensor breakdown.</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Accessible from the 'Share dialog'</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Feature shortcuts</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Save colors to the clipboard</li>
                             </ul>
                         </div>
                     </div>
