--- a/en/get-started/index.html
+++ b/en/get-started/index.html
@@ -100,23 +100,27 @@
                         <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                             <span>01</span>
                             <h3>Try the app</h3>
+                            <p>Please click on the 'Try now' button below to try the app, without installing it (link works only correctly on Android devices).</p>
                             <div class="about_btn padding">
-                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Download Now</a>
+                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter&launch=true" target="_blank">Try now</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                             <span>02</span>
-                            <h3>Link your sensor</h3>
-                            <p>Navigate to the 'My sensors' tab within the app and tap on the '+' button to link your own sensor.</p>
+                            <h3>Download the app</h3>
+                            <p>Wenn Dir die App gefällt, kannst du sie jederzeit installieren, um auf den vollen Funktionsumfang zuzugreifen. If your enjoying the app, you can install it at any time, to access its full scope of features.</p>
+                            <div class="about_btn padding">
+                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Download Now</a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
                         <div class="single_service">
                             <span>03</span>
                             <h3>Enjoy!</h3>
-                            <p>There are no ads or disturbing popups included, so that you can enjoy the app.</p>
+                            <p>There are no ads or annoying popups included, so that you can enjoy the app.</p>
                         </div>
                     </div>
                 </div>
