--- a/src/features/index.html
+++ b/src/features/index.html
@@ -102,15 +102,15 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">str_comfortable</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">str_comfortable_text</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">str_multifunctional</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">str_multifunctional_text</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_map_with_all_sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_compare_different_sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_link_your_own_sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_notification_on_threshold_exceedings</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_notification_on_threshold_exceedings</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">str_evaluate_data_comfortable</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_choose_colors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_choose_image_colors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_create_random_colors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_save_load_export_colors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_speak_colors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">str_instant_version_available</li>
                             </ul>
                         </div>
                     </div>
@@ -120,14 +120,14 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">str_flexible</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">str_flexible_text</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">str_minimalistic</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">str_minimalistic_text</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_show_data_in_a_graph</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_show_data_records</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_show_agerage_and_median</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_export_graph_and_records</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_share_sensor</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_instant_version_available</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_no_annoying_popups</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_lightweight</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_no_wasted_storage</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_no_unnecessary_permissions</li>
                             </ul>
                         </div>
                     </div>
@@ -147,15 +147,12 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">str_high_customizability_title</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">str_high_customizability_text</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">str_modular</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">str_modular_text</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_homescreen_widget</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_adjustable_thresholds</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_auto_error_correction</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_adjustable_sync_cycle</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_dark_mode</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">str_notification_on_sensor_breakdown</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_call_from_share_dialog</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_feature_shortcuts</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_save_colors_clipboard</li>
                             </ul>
                         </div>
                     </div>
