--- a/de/get-started/index.html
+++ b/de/get-started/index.html
@@ -99,17 +99,21 @@
                     <div class="col-lg-4 col-md-4">
                         <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                             <span>01</span>
-                            <h3>Lade die App herunter</h3>
+                            <h3>Probiere die App aus</h3>
+                            <p>Bitte klicke auf den Button unten, um die App auszuprobieren, ohne sie zu installieren (Link funktioniert nur auf Android-Geräten ordnungsgemäß).</p>
                             <div class="about_btn padding">
-                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Jetzt herunterladen</a>
+                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter&launch=true" target="_blank">Jetzt ausprobieren</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                             <span>02</span>
-                            <h3>Verknüpfe Deinen Sensor</h3>
-                            <p>Navigiere innerhalb der App zu dem Reiter 'Meine Sensoren' und tippe auf die '+'-Schaltfläche um einen eigenen Sensor zu verknüpfen.</p>
+                            <h3>Installiere die App</h3>
+                            <p>Wenn Dir die App gefällt, kannst du sie jederzeit installieren, um auf den vollen Funktionsumfang zuzugreifen.</p>
+                            <div class="about_btn padding">
+                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Jetzt herunterladen</a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
