--- a/en/index.html
+++ b/en/index.html
@@ -148,7 +148,7 @@
                         <div class="thumb">
                           <img src="img/icon/volume_up.png" alt="">
                         </div>
-                        <h3>Speak color names *</h3>
+                        <h3>Speak color names</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
@@ -156,7 +156,7 @@
                         <div class="thumb">
                            <img src="img/icon/mobile_friendly.png" alt="">
                         </div>
-                        <h3>Instant version available **</h3>
+                        <h3>Instant version available</h3>
                     </div>
                 </div>
             </div>
@@ -191,15 +191,15 @@
                     <div class="col-lg-4 col-md-4">
                         <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                             <span>02</span>
-                            <h3>Link your sensor</h3>
-                            <p>Navigate to the 'My sensors' tab within the app and tap on the '+' button to link your own sensor.</p>
+                            <h3>Download the app</h3>
+                            <p>Wenn Dir die App gefällt, kannst du sie jederzeit installieren, um auf den vollen Funktionsumfang zuzugreifen. If your enjoying the app, you can install it at any time, to access its full scope of features.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
                         <div class="single_service">
                             <span>03</span>
                             <h3>Enjoy!</h3>
-                            <p>There are no ads or disturbing popups included, so that you can enjoy the app.</p>
+                            <p>There are no ads or annoying popups included, so that you can enjoy the app.</p>
                         </div>
                     </div>
                 </div>
@@ -239,15 +239,14 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">High customizability</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">The app is highly customizable, to ensure a great look and feel.</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Minimalistic</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">The target of this app is, to do exactly what it should do. Not more, not less.</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Homescreen widget.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Adjustable thresholds with notifications.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Automatic error correction.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Adjustable sync cycle.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Dark mode.</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">Notification on sensor breakdown.</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Instant version available</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">No annoying ads or popups</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Lightweight</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">No wasted storage</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">No unnecessary permissions</li>
                             </ul>
                             <div class="about_btn wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".8s" >
                                 <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Download Now</a>
