--- a/src/get-started/index.html
+++ b/src/get-started/index.html
@@ -100,8 +100,9 @@
                         <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                             <span>01</span>
                             <h3>str_step1_title</h3>
+                            <p>str_step1_text</p>
                             <div class="about_btn padding">
-                                <a class="boxed-btn4" href="url_download" target="_blank">str_download_now</a>
+                                <a class="boxed-btn4" href="url_instant" target="_blank">str_try_now</a>
                             </div>
                         </div>
                     </div>
@@ -110,6 +111,9 @@
                             <span>02</span>
                             <h3>str_step2_title</h3>
                             <p>str_step2_text</p>
+                            <div class="about_btn padding">
+                                <a class="boxed-btn4" href="url_download" target="_blank">str_download_now</a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
