--- a/src/index.html
+++ b/src/index.html
@@ -239,15 +239,14 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
-                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">str_high_customizability_title</h3>
-                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">str_high_customizability_text</p>
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">str_minimalistic</h3>
+                            <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">str_minimalistic_text</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_homescreen_widget</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_adjustable_thresholds</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_auto_error_correction</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_adjustable_sync_cycle</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_dark_mode</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">str_notification_on_sensor_breakdown</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_instant_version_available</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_no_annoying_popups</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_lightweight</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_no_wasted_storage</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_no_unnecessary_permissions</li>
                             </ul>
                             <div class="about_btn wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".8s" >
                                 <a class="boxed-btn4" href="url_download" target="_blank">str_download_now</a>
