Add screenshots to English version

--- a/de/features/index.html
+++ b/de/features/index.html
@@ -188,7 +188,7 @@
                         <div class="footer_widget">
                             <h3 class="footer_title"><b>Links</b></h3>
                             <ul>
-                                <li><a href="./get-started">Jetzt loslegen</a></li>
+                                <li><a href="../get-started">Jetzt loslegen</a></li>
                                 <li><a href=".">Funktionen</a></li>
                                 <li><a href="../contact">Kontakt</a></li>
                                 <li><a href="../privacy">Datenschutz</a></li>
