--- a/en/features/index.html
+++ b/en/features/index.html
@@ -188,7 +188,7 @@
                         <div class="footer_widget">
                             <h3 class="footer_title"><b>Useful Links</b></h3>
                             <ul>
-                                <li><a href="./get-started">Get started</a></li>
+                                <li><a href="../get-started">Get started</a></li>
                                 <li><a href=".">Features</a></li>
                                 <li><a href="../contact">Contact</a></li>
                                 <li><a href="../privacy">Privacy</a></li>
