--- a/src/features/index.html
+++ b/src/features/index.html
@@ -188,7 +188,7 @@
                         <div class="footer_widget">
                             <h3 class="footer_title"><b>str_useful_links</b></h3>
                             <ul>
-                                <li><a href="./get-started">str_get_started</a></li>
+                                <li><a href="../get-started">str_get_started</a></li>
                                 <li><a href=".">str_features</a></li>
                                 <li><a href="../contact">str_contact</a></li>
                                 <li><a href="../privacy">str_privacy</a></li>
