Minor text fixes

--- a/de/get-started/index.html
+++ b/de/get-started/index.html
@@ -110,7 +110,7 @@
                         <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                             <span>02</span>
                             <h3>Installiere die App</h3>
-                            <p>Wenn Dir die App gefällt, kannst du sie jederzeit installieren, um auf den vollen Funktionsumfang zuzugreifen.</p>
+                            <p>Wenn Dir die App gefällt, kannst Du sie jederzeit installieren, um auf den vollen Funktionsumfang zuzugreifen.</p>
                             <div class="about_btn padding">
                                 <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Jetzt herunterladen</a>
                             </div>
