--- a/de/index.html
+++ b/de/index.html
@@ -124,7 +124,7 @@
                         <div class="thumb">
                           <img src="img/icon/photo_library.png" alt="">
                         </div>
-                        <h3>Farben von Bildern wählen</h3>
+                        <h3>Farben aus Bildern auslesen</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
@@ -192,7 +192,7 @@
                         <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                             <span>02</span>
                             <h3>Installiere die App</h3>
-                            <p>Wenn Dir die App gefällt, kannst du sie jederzeit installieren, um auf den vollen Funktionsumfang zuzugreifen.</p>
+                            <p>Wenn Dir die App gefällt, kannst Du sie jederzeit installieren, um auf den vollen Funktionsumfang zuzugreifen.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
