--- a/en/index.html
+++ b/en/index.html
@@ -124,7 +124,7 @@
                         <div class="thumb">
                           <img src="img/icon/photo_library.png" alt="">
                         </div>
-                        <h3>Choose colors from images</h3>
+                        <h3>Pick colors from images</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
