--- a/de/features/index.html
+++ b/de/features/index.html
@@ -106,7 +106,7 @@
                             <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">Die App hat viele verschiedene Funktionen. Unter anderem folgende:</p>
                             <ul>
                                 <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Wählen von Farben</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Farben von Bildern wählen</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Farben aus Bildern auslesen</li>
                                 <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Zufällige Farben erzeugen</li>
                                 <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Farben speichern, laden und exportieren</li>
                                 <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Farbennamen vorlesen</li>
