--- a/en/features/index.html
+++ b/en/features/index.html
@@ -106,7 +106,7 @@
                             <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">The app has many different features. For instance this ones:</p>
                             <ul>
                                 <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Choose colors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Choose colors from images</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Pick colors from images</li>
                                 <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Create random colors</li>
                                 <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Save, load and export colors</li>
                                 <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Speak color names</li>
