--- a/de/index.html
+++ b/de/index.html
@@ -220,7 +220,7 @@
                     <div class="col-xl-5 col-lg-5 col-md-6">
                         <div class="features_info2">
                             <h3>Instant-kompatibel</h3>
-                            <p>Die App kann gestartet werden, ohne sie installieren zu müssen! Das hat den Vorteil, dass du sie so schnell wie möglich nutzen kannst und sie keinen Speicherplatz belegt.</p>
+                            <p>Die App kann gestartet werden, ohne sie installieren zu müssen! Das hat den Vorteil, dass Du sie so schnell wie möglich nutzen kannst und sie keinen Speicherplatz belegt.</p>
                             <div class="about_btn">
                                 <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter&launch=true" target="_blank">Jetzt ausprobieren</a>
                             </div>
