Add more animations

--- a/de/get-started/index.html
+++ b/de/get-started/index.html
@@ -97,10 +97,10 @@
     <div class="service_area_2">
         <div class="container">
             <div class="service_content_wrap">
-                <div class="text-center"><h1 class="text-heading">Jetzt loslegen</h1></div>
+                <div class="text-center wow fadeInUp"><h1 class="text-heading">Jetzt loslegen</h1></div>
                 <div class="row bottom-margin">
                     <div class="col-lg-4 col-md-4">
-                        <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
+                        <div class="single_service wow fadeInUp" data-wow-delay=".1s">
                             <span>01</span>
                             <h3>Probiere die App aus</h3>
                             <p>Bitte klicke auf den Button unten, um die App auszuprobieren, ohne sie zu installieren (Link funktioniert nur auf Android-Geräten ordnungsgemäß).</p>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
-                        <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
+                        <div class="single_service wow fadeInUp" data-wow-delay=".2s">
                             <span>02</span>
                             <h3>Installiere die App</h3>
                             <p>Wenn Dir die App gefällt, kannst Du sie jederzeit installieren, um auf den vollen Funktionsumfang zuzugreifen.</p>
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
+                    <div class="col-lg-4 col-md-4 wow fadeInUp" data-wow-delay=".3s">
                         <div class="single_service">
                             <span>03</span>
                             <h3>Genieße die App!</h3>
