--- a/fr/get-started/index.html
+++ b/fr/get-started/index.html
@@ -97,10 +97,10 @@
     <div class="service_area_2">
         <div class="container">
             <div class="service_content_wrap">
-                <div class="text-center"><h1 class="text-heading">Commencer</h1></div>
+                <div class="text-center wow fadeInUp"><h1 class="text-heading">Commencer</h1></div>
                 <div class="row bottom-margin">
                     <div class="col-lg-4 col-md-4">
-                        <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
+                        <div class="single_service wow fadeInUp" data-wow-delay=".1s">
                             <span>01</span>
                             <h3>Essayez l'app</h3>
                             <p>Veuillez cliquer sur le bouton 'Essayer maintenant' ci-dessous pour essayer l'application, sans l'installer (le lien ne fonctionne correctement que sur les appareils Android).</p>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
-                        <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
+                        <div class="single_service wow fadeInUp" data-wow-delay=".2s">
                             <span>02</span>
                             <h3>Téléchargez l'app</h3>
                             <p>Si vous appréciez l'application, vous pouvez l'installer à tout moment, pour accéder à toutes ses fonctionnalités.</p>
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
+                    <div class="col-lg-4 col-md-4 wow fadeInUp" data-wow-delay=".3s">
                         <div class="single_service">
                             <span>03</span>
                             <h3>Prenez plaisir!</h3>
