--- a/src/get-started/index.html
+++ b/src/get-started/index.html
@@ -97,10 +97,10 @@
     <div class="service_area_2">
         <div class="container">
             <div class="service_content_wrap">
-                <div class="text-center"><h1 class="text-heading">str_get_started</h1></div>
+                <div class="text-center wow fadeInUp"><h1 class="text-heading">str_get_started</h1></div>
                 <div class="row bottom-margin">
                     <div class="col-lg-4 col-md-4">
-                        <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
+                        <div class="single_service wow fadeInUp" data-wow-delay=".1s">
                             <span>01</span>
                             <h3>str_step1_title</h3>
                             <p>str_step1_text</p>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
-                        <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
+                        <div class="single_service wow fadeInUp" data-wow-delay=".2s">
                             <span>02</span>
                             <h3>str_step2_title</h3>
                             <p>str_step2_text</p>
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
+                    <div class="col-lg-4 col-md-4 wow fadeInUp" data-wow-delay=".3s">
                         <div class="single_service">
                             <span>03</span>
                             <h3>str_step3_title</h3>
