--- a/en/index.html
+++ b/en/index.html
@@ -371,22 +371,22 @@
                             <p><a href="https://chillibits.com/en"><b>ChilliBits</b></a><br>Amalienstraße 6<br>76646 Bruchsal<br>Germany</p>
                         </div>
                     </div>
-                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
+                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-2">
                         <div class="footer_widget">
-                            <h3 class="footer_title"><b>Services</b></h3>
-                            <ul>
-                                <li><a href="https://github.com/chillibits/particulate-matter-app" target="_blank">App on GitHub</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                        <div class="footer_widget">
-                            <h3 class="footer_title"><b>Useful Links</b></h3>
+                            <h3 class="footer_title"><b>Links</b></h3>
                             <ul>
                                 <li><a href="./get-started">Get started</a></li>
                                 <li><a href="./features">Features</a></li>
                                 <li><a href="./contact">Contact</a></li>
                                 <li><a href="./privacy">Privacy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-6 col-lg-3">
+                        <div class="footer_widget">
+                            <h3 class="footer_title"><b>Services</b></h3>
+                            <ul>
+                                <li><a href="https://github.com/chillibits/particulate-matter-app" target="_blank">App on GitHub</a></li>
                             </ul>
                         </div>
                     </div>
