--- a/fr/privacy/index.html
+++ b/fr/privacy/index.html
@@ -358,24 +358,24 @@
                             <p><a href="https://chillibits.com/fr"><b>ChilliBits</b></a><br>Amalienstraße 6<br>76646 Bruchsal<br>Germany</p>
                         </div>
                     </div>
-                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
+                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-2">
                         <div class="footer_widget">
-                            <h3 class="footer_title"><b>Les services</b></h3>
-                            <ul>
-                                <li><a href="https://github.com/chillibits/color-converter" target="_blank">App sur GitHub</a></li>
-                            </ul>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                        <div class="footer_widget">
-                            <h3 class="footer_title"><b>Liens utiles</b></h3>
+                            <h3 class="footer_title"><b>Liens</b></h3>
                             <ul>
                                 <li><a href="../get-started">Commencer</a></li>
                                 <li><a href="../features">Fonctionnalités</a></li>
                                 <li><a href="../contact">Contact</a></li>
                                 <li><a href=".">Intimité</a></li>
                             </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-6 col-lg-3">
+                        <div class="footer_widget">
+                            <h3 class="footer_title"><b>Les services</b></h3>
+                            <ul>
+                                <li><a href="https://github.com/chillibits/color-converter" target="_blank">App sur GitHub</a></li>
+                            </ul>
+
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-6 col-lg-3">
