--- a/src/index.html
+++ b/src/index.html
@@ -371,22 +371,22 @@
                             <p><a href="url_home"><b>ChilliBits</b></a><br>Amalienstraße 6<br>76646 Bruchsal<br>Germany</p>
                         </div>
                     </div>
-                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
+                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-2">
                         <div class="footer_widget">
-                            <h3 class="footer_title"><b>str_services</b></h3>
-                            <ul>
-                                <li><a href="url_app_github" target="_blank">str_app_on_github</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                        <div class="footer_widget">
-                            <h3 class="footer_title"><b>str_useful_links</b></h3>
+                            <h3 class="footer_title"><b>str_links</b></h3>
                             <ul>
                                 <li><a href="./get-started">str_get_started</a></li>
                                 <li><a href="./features">str_features</a></li>
                                 <li><a href="./contact">str_contact</a></li>
                                 <li><a href="./privacy">str_privacy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-6 col-lg-3">
+                        <div class="footer_widget">
+                            <h3 class="footer_title"><b>str_services</b></h3>
+                            <ul>
+                                <li><a href="url_app_github" target="_blank">str_app_on_github</a></li>
                             </ul>
                         </div>
                     </div>
