Add spreading section to main page

--- a/src/index.html
+++ b/src/index.html
@@ -260,6 +260,38 @@
             </div>
         </div>
     </div>
+
+    <div class="features_area">
+        <div class="container">
+            <div class="section_title text-center  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
+                <h3>str_spreading</h3>
+            </div>
+            <div class="row align-items-center">
+                <img src="./img/map.svg" class="col-xl-12 col-lg-12 col-md-12 wow fadeInUp" width="100%" alt="world map"/>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-xl-4 col-lg-4 col-md-4">
+                    <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
+                        <h1 class="stats-title" id="stats1">str_users_count</h1>
+                        <h6>str_users</h6>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4">
+                    <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".2s">
+                        <h1 class="stats-title" id="stats2">str_countries_count</h1>
+                        <h6>str_countries</h6>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4">
+                    <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".4s">
+                        <h1 class="stats-title" id="stats3">str_devices_count</h1>
+                        <h6>str_devices</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!--/ about  -->
     <!-- testmonial_area  -->
     <div class="testmonial_area">
