--- a/de/index.html
+++ b/de/index.html
@@ -270,19 +270,25 @@
                 <img src="./img/map.svg" class="col-xl-12 col-lg-12 col-md-12 wow fadeInUp" width="100%" alt="world map"/>
             </div>
             <div class="row align-items-center">
-                <div class="col-xl-4 col-lg-4 col-md-4">
+                <div class="col-xl-3 col-lg-3 col-md-3">
+                    <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
+                        <h1 class="stats-title" id="stats1">10.000</h1>
+                        <h6>Installationen</h6>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
                         <h1 class="stats-title" id="stats1">2.100</h1>
                         <h6>aktive Nutzer</h6>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4">
+                <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".2s">
                         <h1 class="stats-title" id="stats2">141</h1>
                         <h6>Länder</h6>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4">
+                <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".4s">
                         <h1 class="stats-title" id="stats3">2.200</h1>
                         <h6>aktive Geräte</h6>
